<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".GameSettings">
    <TextView
            android:layout_marginBottom="80dp"
            android:layout_gravity="center"
            android:text="@string/game_settings_header_label"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:textSize="20sp"
            android:text="@string/grid_size_label"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TableRow
            android:layout_gravity="center"
            android:paddingHorizontal="60dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grid_x_size_label"/>
        <EditText
                android:gravity="center"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editTextNumberX"
                android:labelFor="@null"
                tools:ignore="LabelFor"
                android:autofillHints="3"/>
        <TextView
                android:clickable="false"
                android:visibility="invisible"
                android:layout_marginHorizontal="20dp"/>
        <TextView
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/grid_y_size_label"/>
        <EditText
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editTextNumberY"
                android:labelFor="@null"
                android:autofillHints="3"
                tools:ignore="LabelFor"/>
    </TableRow>
    <RelativeLayout
            android:layout_marginVertical="100dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:text="@string/button_save_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/buttonSave"/>
        <Button
                android:clickable="true"
                android:id="@+id/buttonSave"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/button_bg_round"
                android:layout_width="70dp"
                android:layout_height="70dp"/>
    </RelativeLayout>
</LinearLayout>